Add support for authdb, ssl and configurable replica sets